<resources>
    <string name="app_name">UniverCityApp</string>
    <string name="facebook_app_id">494491574690359</string>
    <string name="facebook_login_protocol_scheme">fb494491574690359</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name = "introText">Hi there, we\'re excited you\'re here! UniverCity might feel a bit daunting right now, but we promise by the end you\'ll have some great memories... </string>
    <string name = "introText2">To help hit the ground running, we\'ve put together a few useful resources...</string>
    <string name = "introText3">Major Quiz</string>
    <string name = "introText3A">Too many major options, not sure what to choose? Take our quiz to see what you might enjoy!</string>
    <string name = "introText4">Degree Planner</string>
    <string name = "introText4A">Based on your degree and major choices, we provide the list of subjects you have to complete</string>
    <string name = "introText5">WAMbulance</string>
    <string name = "introText5A">WeewoooWeewoo! Did someone call the WAMbulance? The WAM calculator feature will help you set and maintain your academic goals </string>
    <string name = "introText6">Major Exploration Page</string>
    <string name = "introText6A">Learn about the different major offerings UNSW provides</string>
    <string name = "introText7A">Throughout your degree, Mr. Corgi will be with you at the bottom right of the screen and will evolve as you progress to keep you motivated! Let\'s begin!</string>



    <string name="todo">TODO</string>


</resources>

